# soap-klient

./: CMakeLists.txt  README.md  datastructures.h  interface.h  interfacepage.cpp  interfacepage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operationcallpage.cpp  operationcallpage.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  project.h  projectpage.cpp  soapclient.cpp  soapclient.h  teststep.h  testsuite.h  ui_mainwindow.h  ui_operationcallpage.h  ui_preferencesdialog.h  ui_projectpage.h  workspace.h  workspacemodel.cpp  workspacemodel.h  xmlparser.cpp  xmlparser.h
po/: ru.po  soap-klient.pot  translate.sh
src/: CMakeLists.txt  main.cpp  mainwindow.h  operationcall.h  preferences.h  preferencesdialog.cpp  project.h  projectpage.h  soapclient.cpp  soapclient.h  testcase.h  ui_interfacepage.h  ui_mainwindow.h  ui_operationcallpage.h  ui_preferencesdialog.h  workspacemodel.h  xmlparser.cpp  xmlparser.h
